--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
-    "next": "15.2.2",
+    "next": "^15.3.0",
+    "next-intl": "^4.0.2",
+    "next-translate": "^2.6.2",
     "particles.js": "^2.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
